
Changelog for 1.13.0

Added functionalities
* Concurrent logins into multiple companies on a single browser (#8496)

Changed functionalities
* Concurrent logins with different users on one browser throw an error (#8496)

Removed functionalities

Bugs fixed

Cleanup & architecture improvements
* Loading of main section more predictable through state machine use (#8530)

Updated dependencies


Changelog for 1.12 Series
Released 2024-12-14

Changelog for 1.12.0

Added functionalities
* AR/AP transaction history similar to invoices (#7773)
* More consistency checks in setup.pl (#7649)
* Ability to include documentation in Chart of Account definition files (#7651)
* Highlighting of unapproved payments on invoices and transactions (#7777)
* Enhancements for migrations from 1.3 through 1.7 (#7794)
* Enhancements for migrations from 1.3 through 1.5 (#7795)
* Enhancements for migrations from 1.3 (#7793)
* Experimental Orders API (#8084)
* Persistence of calculated taxes on orders and quotes (#8038)
* Database upgrade log inspection in setup.pl (#8363)
* Ship To 'At the attention of' (Ship To Attn) (#8360)
* Support for external template rendering engines like weasyprint (#8440)

Changed functionalities
* Sub-templates 'dynatable' merged into 'display_report' templates (#8380)
* Default cookie names no longer include LedgerSMB version number (#7639)
* Reconciliation state managed through workflows (#8154, #8158)
* Ship To addresses now immutable (#8365)
* Move '(in)active' from location itself to entity/credit account link (#8333)

Removed functionalities
* 'Class' removed from Company and Person entry and search (#8086, #8087)

Bugs fixed
* Invoices from batch printed even though not paid (#7761)
* Countries in setup.pl from Locale::CLDR; use reference data instead (#7648)
* Correctness of HTML pages, now includes 'html' closing tag (#7784)
* JavaScript dependencies versus dev-dependencies (#8028)
* AR/AP items in vouchers can be saved only once (#6895)