@@ -9,7 +9,6 @@ use Data::Dumper;
 use DBI;
 use Digest::MD5 qw( md5_hex );
 use File::Temp qw( :seekable );
-use IO::Scalar;
 use MIME::Base64;
 use Plack::Request;
 
@@ -175,7 +174,8 @@ check 'title',
 1;
 HEREDOC
 
-$fh = IO::Scalar->new(\$tests);
+open $fh, '<', \$tests
+    or die "$!";
 ok( lives { @checks = load_checks($fh); is scalar @checks, 1 },
     'Loading a single check from file-handle');
 
@@ -231,7 +231,8 @@ check 'title',
 1;
 HEREDOC
 
-$fh = IO::Scalar->new(\$tests);
+open $fh, '<', \$tests
+    or die $!;
 ok( lives { @checks = load_checks($fh); is scalar @checks, 1 },
           'Loading a single check from file-handle');
 
@@ -285,7 +286,8 @@ check 'title',
 1;
 HEREDOC
 
-$fh = IO::Scalar->new(\$tests);
+open $fh, '<', \$tests
+    or die $!;
 ok( lives { @checks = load_checks($fh); is scalar @checks, 1 },
            'Loading a single check from file-handle');
 
@@ -339,7 +341,8 @@ check 'title',
 1;
 HEREDOC
 
-$fh = IO::Scalar->new(\$tests);
+open $fh, '<', \$tests
+    or die $!;
 ok( lives { @checks = load_checks($fh); is scalar @checks, 1 },
           'Loading a single check from file-handle');
 
@@ -411,7 +414,8 @@ check 'title',
 1;
 HEREDOC
 
-$fh = IO::Scalar->new(\$tests);
+open $fh, '<', \$tests
+    or die $!;
 ok(lives { @checks = load_checks($fh); is scalar @checks, 1 },
           'Loading a single check from file-handle');
 
