@@ -11,7 +11,6 @@ use LedgerSMB::Database::ChangeChecks qw( :DEFAULT run_with_formatters
 use Data::Dumper;
 use DBI;
 use File::Temp qw( :seekable );
-use IO::Scalar;
 use MIME::Base64;
 
 
@@ -53,7 +52,8 @@ package PreCheckTests;
 HEREDOC
 
 
-my $fh = IO::Scalar->new(\$tests);
+open my $fh, '<', \$tests
+    or die $!;
 ok( lives { is scalar &load_checks($fh), 0; } ,
           'Loading empty checks from file-handle');
 
@@ -86,7 +86,8 @@ check 'title',
 1;
 HEREDOC
 
-$fh = IO::Scalar->new(\$tests);
+open $fh, '<', \$tests
+    or die $!;
 ok( lives { is scalar &load_checks($fh), 1; },
           'Loading a single check from file-handle');
 
@@ -114,7 +115,8 @@ check 'title2',
 1;
 HEREDOC
 
-$fh = IO::Scalar->new(\$tests);
+open $fh, '<', \$tests
+    or die $!;
 ok( lives { is scalar &load_checks($fh), 2; },
           'Loading two checks from file-handle');
 
@@ -142,7 +144,8 @@ check 'title',
 1;
 HEREDOC
 
-$fh = IO::Scalar->new(\$tests);
+open $fh, '<', \$tests
+    or die $!;
 like( dies { &load_checks($fh); },
           qr/^Multiple checks with the same name not supported/,
           'Loading two equally named checks from file-handle');
@@ -170,7 +173,8 @@ check 'title',
 1;
 HEREDOC
 
-$fh = IO::Scalar->new(\$tests);
+open $fh, '<', \$tests
+    or die $!;
 like( dies { &load_checks($fh); }, qr/doesn't define a description/,
     '"check" keyword bails without a description');
 
@@ -188,7 +192,8 @@ check 'title',
 1;
 HEREDOC
 
-$fh = IO::Scalar->new(\$tests);
+open $fh, '<', \$tests
+    or die $!;
 like( dies { &load_checks($fh); }, qr/doesn't define a query/,
     '"check" keyword bails without a query');
 
@@ -207,7 +212,8 @@ check 'title',
 1;
 HEREDOC
 
-$fh = IO::Scalar->new(\$tests);
+open $fh, '<', \$tests
+    or die $!;
 like( dies { &load_checks($fh); }, qr/doesn't define 'on_submit'/,
     '"check" keyword bails without an "on_submit"');
 
@@ -226,7 +232,8 @@ check 'title',
 1;
 HEREDOC
 
-$fh = IO::Scalar->new(\$tests);
+open $fh, '<', \$tests
+    or die $!;
 like( dies { &load_checks($fh); }, qr/doesn't define 'on_failure'/,
     '"check" keyword bails without an "on_failure"');
 
