@@ -121,6 +121,7 @@ pager = less
     set_themes = lsmb lsmb_new
 [Modules::RequireExplicitPackage]
     set_themes = lsmb lsmb_new lsmb_old
+    allow_import_of = v5.36 experimental warnings
 [Modules::RequireFilenameMatchesPackage]
     set_themes = lsmb lsmb_new lsmb_old_wip lsmb_tests
 
